--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "searchspot",
+  "name": "Search for your favorite artists.",
   "icons": [
     {
       "src": "search.ico",
